java8 rebuild